--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Friedrich-Maximilian Weberling</title>
+    <meta
+        content="Friedrich is a PhD Student in Biochemistry at the Hollfelder Lab (University of Cambridge) where his research focuses on machine learning for enzyme optimisation and single-cell sequencing."
+        name="description" />
+    <meta content="Friedrich-Maximilian Weberling" property="og:title" />
+    <meta content="./preview.png" property="og:image" />
+    <meta content="Friedrich-Maximilian Weberling" property="twitter:title" />
+    <meta content="./preview.png" property="twitter:image" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
 </head>
 <body>
 <h1>Friedrich-Maximilian Weberling</h1>
