--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <meta content="Friedrich-Maximilian Weberling" property="twitter:title" />
     <meta content="./preview.png" property="twitter:image" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <script
+        type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });</script>
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+    <script
+        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+    <link href="./myicon.png" rel=" shortcut icon" type="image/x-icon" />
 </head>
 <body>
 <h1>Friedrich-Maximilian Weberling</h1>
