--- a/index.html
+++ b/index.html
@@ -18,8 +18,35 @@
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="./myicon.png" rel=" shortcut icon" type="image/x-icon" />
+
 </head>
+
 <body>
+    <div class="navbar-logo-left wf-section">
+        <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
+            role="banner" class="navbar-logo-left-container shadow-three w-nav">
+            <div class="container-5">
+                <div class="navbar-wrapper-2"><a href="#" class="navbar-brand-2 w-nav-brand"><img src="./fmw.png"
+                            loading="lazy" height="20" alt="" /></a>
+                    <nav role="navigation" class="nav-menu-wrapper-2 w-nav-menu">
+                        <ul role="list" class="nav-menu-two w-list-unstyled">
+                            <li><a href="#Academic" class="nav-link-2">Academic</a></li>
+                            <li><a href="#work" class="nav-link-2">Work Exp.</a></li>
+                            <li><a href="#extra" class="nav-link-2">Extracurricular</a></li>
+                            <li></li>
+                            <li></li>
+                            <li class="mobile-margin-top-11"><a href="mailto:fmw37@cam.ac.uk"
+                                    class="button-primary-3 w-button">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div class="menu-button-3 w-nav-button">
+                        <br></br>
+                        <!--<div class="w-icon-nav-menu"></div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <h1>Friedrich-Maximilian Weberling</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
