--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
             </div>
         </div>
     </div>
+    <section class="hero-heading-center wf-section">
+        <div class="container-2">
+            <div class="hero-wrapper">
+                <div class="hero-split">
+                    <p class="margin-bottom-24px">Hello World!
+
+                    </p>
+                </div>
+                <div class="hero-split"><img src="./me.jpg" loading="lazy"
+                        sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
+                        srcset="./me.jpg" alt="" class="shadow-two" /></div>
+            </div>
+        </div>
 <h1>Friedrich-Maximilian Weberling</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
