--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <section class="hero-heading-center wf-section">
+     <section class="hero-heading-center wf-section">
         <div class="container-2">
             <div class="hero-wrapper">
                 <div class="hero-split">
@@ -60,7 +60,6 @@
                         srcset="./me.jpg" alt="" class="shadow-two" /></div>
             </div>
         </div>
-<h1>Friedrich-Maximilian Weberling</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    </section>
 </body>
 </html>
