--- a/index.html
+++ b/index.html
@@ -61,5 +61,12 @@
             </div>
         </div>
     </section>
+    <section class="logos-without-title wf-section">
+        <div class="container-4">
+            <div class="clients-wrapper-three">
+                srcset="./cam.jpeg 500w, ./cam.jpeg 800w, ./cam.jpeg 800w" height="32" alt="Cam logo"
+            </div>
+        </div>
+    </section>
 </body>
 </html>
