--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
+    
      <section class="hero-heading-center wf-section">
         <div class="container-2">
             <div class="hero-wrapper">
@@ -61,13 +62,39 @@
             </div>
         </div>
     </section>
+
     <section class="logos-without-title wf-section">
         <div class="container-4">
             <div class="clients-wrapper-three">
                 srcset="./cam.jpeg 500w, ./cam.jpeg 800w, ./cam.jpeg 800w" height="32" alt="Cam logo"
             </div>
         </div>
+
     </section>
+
+    <section class="academic wf-section">
+        <div class="container-3">
+            <h2 id="Academic" class="centered-heading-2">Academic Experience</h2>
+        </div>
+    </section>
+    <div class="pretty-divider wf-section"></div>
+    <section class="pretty-divider working wf-section">
+        <div class="container-3">
+            <h2 id="work" class="centered-heading-2">Working Experience</h2>
+        </div>
+
+    </section>
+    <div class="other-pretty-divider wf-section"></div>
+    <div class="section">
+        <div class="container"></div>
+    </div>
+
+    <section class="academic wf-section">
+        <div class="container-3">
+            <h2 id="extra" class="centered-heading-2">Extracurricular Experience</h2>
+        </div>
+    </section>
+
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=635fd89f2751f1751759fc87"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
