Include Cambridge logo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    
+
      <section class="hero-heading-center wf-section">
         <div class="container-2">
             <div class="hero-wrapper">
@@ -58,7 +58,8 @@
                 </div>
                 <div class="hero-split"><img src="./me.jpg" loading="lazy"
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
-                        srcset="./me.jpg" alt="" class="shadow-two" /></div>
+                        srcset="./me.jpg" alt="" class="shadow-two" />
+                </div>
             </div>
         </div>
     </section>
@@ -66,7 +67,7 @@
     <section class="logos-without-title wf-section">
         <div class="container-4">
             <div class="clients-wrapper-three">
-                srcset="./cam.jpeg 500w, ./cam.jpeg 800w, ./cam.jpeg 800w" height="32" alt="Cam logo"
+                <img src="./cam.jpeg" loading="lazy" srcset="./cam.jpeg 500w, ./cam.jpeg 800w" height="32" alt="Cambridge logo" sizes="76.1875px" class="clients-image-three">
             </div>
         </div>
 
