--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="container-4">
             <div class="clients-wrapper-three">
                 <img src="./cam.jpeg" loading="lazy" srcset="./cam.jpeg 500w, ./cam.jpeg 800w" height="32" alt="Cambridge logo" sizes="76.1875px" class="clients-image-three">
-                <img src="./tum.png" loading="lazy" height="32" alt="TUM logo"><!-- Think about srcset-->
-                <img src="./tub.png" loading="lazy" height="32" alt="TU Berlin logo" > <!-- Think about srcset-->
+                <img src="./tum.png" loading="lazy" height="32" alt="TUM logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./tub.png" loading="lazy" height="32" alt="TU Berlin logo" class="clients-image-three"> <!-- Think about srcset-->
             </div>
         </div>
 
