Added work logos

--- a/index.html
+++ b/index.html
@@ -80,14 +80,26 @@
             <h2 id="Academic" class="centered-heading-2">Academic Experience</h2>
         </div>
     </section>
+
     <div class="pretty-divider wf-section"></div>
+
+    <section class="logos-without-title wf-section">
+        <div class="container-4">
+            <img src="./SAP.png" loading="lazy" height="32" alt="SAP logo" class="clients-image-three"><!-- Think about srcset-->
+            <img src="./capgemini_invent.png" loading="lazy" height="32" alt="Capgemini logo" class="clients-image-three"><!-- Think about srcset-->
+            <img src="./MAN_es.png" loading="lazy" height="32" alt="MAN ES logo" class="clients-image-three"><!-- Think about srcset-->
+        </div>
+
+    </section>
+
     <section class="pretty-divider working wf-section">
         <div class="container-3">
             <h2 id="work" class="centered-heading-2">Working Experience</h2>
         </div>
-
     </section>
+
     <div class="other-pretty-divider wf-section"></div>
+
     <div class="section">
         <div class="container"></div>
     </div>
