--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
 
     <section class="logos-without-title wf-section">
         <div class="container-4">
-            <img src="./SAP.png" loading="lazy" height="32" alt="SAP logo" class="clients-image-three"><!-- Think about srcset-->
-            <img src="./capgemini_invent.png" loading="lazy" height="32" alt="Capgemini logo" class="clients-image-three"><!-- Think about srcset-->
-            <img src="./MAN_es.png" loading="lazy" height="32" alt="MAN ES logo" class="clients-image-three"><!-- Think about srcset-->
+            <div class="clients-wrapper-three">
+                <img src="./SAP.png" loading="lazy" height="32" alt="SAP logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./capgemini_invent.png" loading="lazy" height="32" alt="Capgemini logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./MAN_es.png" loading="lazy" height="32" alt="MAN ES logo" class="clients-image-three"><!-- Think about srcset-->
+            </div>
         </div>
 
     </section>
