--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
         <div class="container-3">
             <h2 id="Academic" class="centered-heading-2">Academic Experience</h2>
         </div>
+
+        <ol role="list"  class="w-list-unstyled">
+            <li class="list-item">
+                <strong> University of Cambridge, Jesus College <br> </strong>
+                <em>
+                    PhD in Biochemistry (October 2023 - Present) <br>
+                </em><br>
+                Machine Learning for enzyme optimisation, directed evolution, and single-cell sequencing, supervised by
+                Prof Florian Hollfelder and fully funded by Stiftung der Deutschen Wirtschaft, Evonik Stiftung, and Cambridge Trust
+            </li>
+            <li class="list-item">
+                <strong>Technical University of Munich (TUM) <br></strong>
+                <em>
+                    MSc Robotics, Cognition, Intelligence (April 2019 - July 2022)
+                </em>
+                <br> Focus: (Probabilistic) Machine Learning, Deep Learning, Computer Vision
+            </li>
+            <li class="list-item">
+                <strong>Technical University of Berlin <br></strong>
+                <em>
+                    BSc Mechanical Engineering (October 2014 - March 2018)
+                </em>
+                <br> Focus: Industrial robotics, fluid mechanics, finite element method
+            </li>
+        </ol>
+
     </section>
 
     <div class="pretty-divider wf-section"></div>
