--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <strong> University of Cambridge, Jesus College <br> </strong>
                 <em>
                     PhD in Biochemistry (October 2023 - Present) <br>
-                </em><br>
+                </em>
                 Machine Learning for enzyme optimisation, directed evolution, and single-cell sequencing, supervised by
                 Prof Florian Hollfelder and fully funded by Stiftung der Deutschen Wirtschaft, Evonik Stiftung, and Cambridge Trust
             </li>
@@ -124,6 +124,46 @@
         <div class="container-3">
             <h2 id="work" class="centered-heading-2">Working Experience</h2>
         </div>
+
+        <ol role="list" class="w-list-unstyled">
+            <li class="list-item">
+                <strong> SAP SE <br></strong>
+                <em>
+                    Student Trainee at Digital Business Services - Innovation Services & Solutions (May 2019 - October 2019)
+                </em>
+                <br> Software development and data analytics for SAP Rural Sourcing Management
+            </li>
+            <li class="list-item">
+                <strong> SAP SE <br></strong>
+                <em>
+                    Student Trainee at Digital Business Services - Innovation Services & Solutions
+                    (May 2019 - October 2019)
+                </em>
+                <br> Software development and data analytics for SAP Rural Sourcing Management
+            </li>
+            <li class="list-item">
+                <strong> Capgemini Invent <br></strong>
+                <em>
+                    Student Consultant at Strategy & Innovation (January 2019 - March 2019)
+                </em>
+                <br> Strategy and digital transformation for global healthcare company in Germany and the USA
+            </li>
+            <li class="list-item">
+                <strong> SAP SE <br></strong>
+                <em>
+                    Intern at Products & Innovation – Innovative Business Solutions (March 2018 - August 2018)
+                </em>
+                <br> Software development, project management, conducting the Go-Live of the Rural Sourcing Management
+                for a smallholder farmer cooperative on-site in Uganda
+            </li>
+            <li class="list-item">
+                <strong> MAN Energy Solutions <br></strong>
+                <em>
+                    Student Trainee at R&D Engineering Turbomachinery (December 2015 - March 2017)
+                </em>
+                <br> Design of integral gear compressors using CAD
+            </li>
+        </ol>
     </section>
 
     <div class="other-pretty-divider wf-section"></div>
