--- a/index.html
+++ b/index.html
@@ -134,14 +134,6 @@
                 <br> Software development and data analytics for SAP Rural Sourcing Management
             </li>
             <li class="list-item">
-                <strong> SAP SE <br></strong>
-                <em>
-                    Student Trainee at Digital Business Services - Innovation Services & Solutions
-                    (May 2019 - October 2019)
-                </em>
-                <br> Software development and data analytics for SAP Rural Sourcing Management
-            </li>
-            <li class="list-item">
                 <strong> Capgemini Invent <br></strong>
                 <em>
                     Student Consultant at Strategy & Innovation (January 2019 - March 2019)
@@ -176,6 +168,23 @@
         <div class="container-3">
             <h2 id="extra" class="centered-heading-2">Extracurricular Experience</h2>
         </div>
+
+        <ol role="list" class="w-list-unstyled">
+            <li class="list-item">
+                <strong> Cambridge University German Society <br></strong>
+                <em>
+                    Events Officer (March 2023 - Present)
+                </em>
+                <strong> Association of Christian Democratic Students (RCDS) <br></strong>
+                <em>
+                    Chairman of Region Northeast (October 2017 - November 2018)
+                </em>
+                <br> RCDS is a political student organisation with more than 100
+                groups at universities and 8000 members; it is closely related to the Christian Democratic Union (CDU)
+                of Germany
+                <br> Focus: Digitisation, education, research, and university policy
+            </li>
+        </ol>
     </section>
 
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=635fd89f2751f1751759fc87"
