--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="hero-split"><img src="./me.jpg" loading="lazy"
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
-                        srcset="./me.jpg" alt="" class="shadow-two" />
+                        srcset="./fmw.png" alt="" class="shadow-two" />
                 </div>
             </div>
         </div>
@@ -175,6 +175,8 @@
                 <em>
                     Events Officer (March 2023 - Present)
                 </em>
+            </li>
+            <li class="list-item">
                 <strong> Association of Christian Democratic Students (RCDS) <br></strong>
                 <em>
                     Chairman of Region Northeast (October 2017 - November 2018)
