--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
                     </p>
                 </div>
-                <div class="hero-split"><img src="./me.jpg" loading="lazy"
+                <div class="hero-split">
+                    <img src="./fmw.png" loading="lazy"
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
                         srcset="./fmw.png" alt="" class="shadow-two" />
                 </div>
