Updated img in styles.css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             loading="lazy" height="20" alt="" /></a>
                     <nav role="navigation" class="nav-menu-wrapper-2 w-nav-menu">
                         <ul role="list" class="nav-menu-two w-list-unstyled">
-                            <li><a href="#Academic" class="nav-link-2">Academic</a></li>
+                            <li><a href="#Academic" class="nav-link-2">Education</a></li>
                             <li><a href="#work" class="nav-link-2">Work Exp.</a></li>
                             <li><a href="#extra" class="nav-link-2">Extracurricular</a></li>
                             <li></li>
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="hero-split">
-                    <img src="./fmw.png" loading="lazy" rotate="90"
+                    <img src="./fmw.png" loading="lazy" rotate=""
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
                         srcset="./fmw.png" alt="" class="shadow-two" />
                 </div>
@@ -78,7 +78,7 @@
 
     <section class="academic wf-section">
         <div class="container-3">
-            <h2 id="Academic" class="centered-heading-2">Academic Experience</h2>
+            <h2 id="Academic" class="centered-heading-2">Education</h2>
         </div>
 
         <ol role="list"  class="w-list-unstyled">
