--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <li><a href="#Academic" class="nav-link-2">Education</a></li>
                             <li><a href="#work" class="nav-link-2">Work Exp.</a></li>
                             <li><a href="#extra" class="nav-link-2">Extracurricular</a></li>
+                            <li><a href="#awards" class="nav-link-2">Scholarships</a> </li>
                             <li></li>
                             <li></li>
                             <li class="mobile-margin-top-11"><a href="mailto:fmw37@cam.ac.uk"
@@ -186,6 +187,44 @@
                 groups at universities and 8000 members; it is closely related to the Christian Democratic Union (CDU)
                 of Germany
                 <br> Focus: Digitisation, education, research, and university policy
+            </li>
+        </ol>
+    </section>
+
+    <section class="logos-without-title wf-section">
+        <div class="container-4">
+            <div class="clients-wrapper-three">
+                <img src="./CT.png" loading="lazy" height="32" alt="Cambridge Trust logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./evonik_stiftung.png" loading="lazy" height="32" alt="Evonik logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./sdw.jpeg" loading="lazy" height="32" alt="SDW logo" class="clients-image-three"><!-- Think about srcset-->
+            </div>
+        </div>
+
+    </section>
+
+    <section class="academic wf-section">
+        <div class="container-3">
+            <h2 id="awards" class="centered-heading-2">Scholarships</h2>
+        </div>
+
+        <ol role="list" class="w-list-unstyled">
+            <li class="list-item">
+                <strong> Cambridge Trust  <br></strong>
+                <em>
+                    PhD Scholarship (October 2023 - September 2026)
+                </em>
+            </li>
+            <li class="list-item">
+                <strong> Evonik Stiftung  <br></strong>
+                <em>
+                    PhD Scholarship (October 2023 - September 2025)
+                </em>
+            </li>
+            <li class="list-item">
+                <strong> Stiftung der Deutschen Wirtschaft  <br></strong>
+                <em>
+                    PhD Scholarship (October 2023 - September 2025)
+                </em>
             </li>
         </ol>
     </section>
