--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 <img src="./CT.png" loading="lazy" height="32" alt="Cambridge Trust logo" class="clients-image-three"><!-- Think about srcset-->
                 <img src="./evonik_stiftung.png" loading="lazy" height="32" alt="Evonik logo" class="clients-image-three"><!-- Think about srcset-->
                 <img src="./sdw.jpeg" loading="lazy" height="32" alt="SDW logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./kas.jpeg" loading="lazy" height="32" alt="KAS logo" class="clients-image-three"><!-- Think about srcset-->
             </div>
         </div>
 
@@ -226,8 +227,25 @@
                     PhD Scholarship (October 2023 - September 2025)
                 </em>
             </li>
+            <li class="list-item">
+                <strong> Konrad Adenauer Foundation  <br></strong>
+                <em>
+                    Scholarship for academic excellence and leadership (October 2016 - July 2022)
+                </em>
+            </li>
         </ol>
     </section>
+
+    <div class="footer-wrap">
+        <div class="footer-links">
+            <a href="https://www.linkedin.com/in/friedrich-maximilian-weberling-581b3316a/" target="_blank"
+                class="footer-item">Linkedin</a>
+            <a href="https://github.com/fweberling" target="_blank"
+                class="footer-item">GitHub</a>
+            <a href="https://hollfelder.bioc.cam.ac.uk/" target="_blank"
+                class="footer-item">Email: fmw37[at]cam.ac.uk</a>
+        </div>
+    </div>
 
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=635fd89f2751f1751759fc87"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
