--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             loading="lazy" height="20" alt="" /></a>
                     <nav role="navigation" class="nav-menu-wrapper-2 w-nav-menu">
                         <ul role="list" class="nav-menu-two w-list-unstyled">
+                            <li><a href="#Research" class="nav-link-2">Research</a></li>
                             <li><a href="#Academic" class="nav-link-2">Education</a></li>
                             <li><a href="#work" class="nav-link-2">Work Exp.</a></li>
                             <li><a href="#extra" class="nav-link-2">Extracurricular</a></li>
@@ -64,6 +65,13 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="academic wf-section">
+        <div class="container-3">
+            <h2 id="Research" class="centered-heading-2"> Research </h2>
+        </div>
+
     </section>
 
     <section class="logos-without-title wf-section">
@@ -197,7 +205,7 @@
                 <img src="./CT.png" loading="lazy" height="32" alt="Cambridge Trust logo" class="clients-image-three"><!-- Think about srcset-->
                 <img src="./evonik_stiftung.png" loading="lazy" height="32" alt="Evonik logo" class="clients-image-three"><!-- Think about srcset-->
                 <img src="./sdw.jpeg" loading="lazy" height="32" alt="SDW logo" class="clients-image-three"><!-- Think about srcset-->
-                <img src="./kas.jpeg" loading="lazy" height="32" alt="KAS logo" class="clients-image-three"><!-- Think about srcset-->
+                <img src="./kas.png" loading="lazy" height="32" alt="KAS logo" class="clients-image-three"><!-- Think about srcset-->
             </div>
         </div>
 
