--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
             role="banner" class="navbar-logo-left-container shadow-three w-nav">
             <div class="container-5">
-                <div class="navbar-wrapper-2"><a href="#" class="navbar-brand-2 w-nav-brand">Friedrich-Maximilian Weberling<img src="./fmw.png"
-                            loading="lazy" height="20" alt="" /></a>
+                <div class="navbar-wrapper-2"><a href="#" class="navbar-brand-2 w-nav-brand"><strong>Friedrich-Maximilian Weberling</strong></a>
                     <nav role="navigation" class="nav-menu-wrapper-2 w-nav-menu">
                         <ul role="list" class="nav-menu-two w-list-unstyled">
                             <li><a href="#Research" class="nav-link-2">Research</a></li>
