--- a/index.html
+++ b/index.html
@@ -116,8 +116,6 @@
 
     </section>
 
-    <div class="pretty-divider wf-section"></div>
-
     <section class="logos-without-title wf-section">
         <div class="container-4">
             <div class="clients-wrapper-three">
@@ -129,7 +127,7 @@
 
     </section>
 
-    <section class="pretty-divider working wf-section">
+    <section class="academic wf-section">
         <div class="container-3">
             <h2 id="work" class="centered-heading-2">Working Experience</h2>
         </div>
