--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="container-2">
             <div class="hero-wrapper">
                 <div class="hero-split">
-                    <p class="margin-bottom-24px">Hello World!
-
+                    <p class="margin-bottom-24px">
+                        Hello World! I'm Friedrich, a PhD student supervised by Prof Florian Hollfelder at the University of Cambridge.
                     </p>
                 </div>
                 <div class="hero-split">
