--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         <div class="container-3">
             <h2 id="Research" class="centered-heading-2"> Research </h2>
         </div>
+        <ul>
+            <li>Machine Learning</li>
+            <li>Enzyme Optimisation</li>
+            <li>Directed Evolution</li>
+            <li>Protein Engineering</li>
+            <li>Single-Cell Sequencing</li>
+        </ul>
 
     </section>
 
