--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="hero-split">
                     <img src="./fmw.png" loading="lazy"
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
-                        srcset="./fmw.png" alt="" class="rotate90" />
+                        srcset="./fmw.png" alt="" class="shadow-two" />
                 </div>
             </div>
         </div>
