--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="hero-split">
                     <img src="./fmw.png" loading="lazy"
                         sizes="(max-width: 479px) 62vw, (max-width: 767px) 63vw, (max-width: 991px) 61vw, 29vw"
-                        srcset="./fmw.png" alt="" class="shadow-two" />
+                        srcset="./fmw.png" alt="" class="rotate90" />
                 </div>
             </div>
         </div>
@@ -70,13 +70,13 @@
         <div class="container-3">
             <h2 id="Research" class="centered-heading-2"> Research </h2>
         </div>
-        <ul>
-            <li>Machine Learning</li>
-            <li>Enzyme Optimisation</li>
-            <li>Directed Evolution</li>
-            <li>Protein Engineering</li>
-            <li>Single-Cell Sequencing</li>
-        </ul>
+        <ol role="list"  class="w-list-unstyled">
+            <li class="list-item">Machine Learning</li>
+            <li class="list-item">Directed Evolution</li>
+            <li class="list-item">Enzyme Optimisation</li>
+            <li class="list-item">Protein Engineering</li>
+            <li class="list-item">Single-Cell Sequencing</li>
+        </ol>
 
     </section>
 
